press f to pay respects

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
               </a>
             </li>
           </ul>
+          <p>Press f to pay respects.</p>
         </div>
       </section>
 
